[metadata]
name = rain
version = 0.0.1
author = nullcount
author_email = _@nullcount.com
description = short package description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nullcount/rain
project_urls =
    Bug Tracker = https://github.com/nullcount/rain/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11.6
install_requires =
    googleapis-common-protos==1.56.0
    grpcio==1.51.1
    python-box==7.0.1
    requests==2.31.0
    esult==0.13.1
    typing==3.7.4.3

[options.packages.find]
where = src